--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -931,7 +931,7 @@
 <h2>Why is 1v1.lol So Popular?</h2>
 <p>One of the best things about <strong>1v1.lol</strong> is that the matches are short. This makes it perfect for squeezing in a game during a break between classes. The game’s easy-to-learn controls and building mechanics add a creative element, so it’s not just about shooting—it’s also about outbuilding your opponent.
 
-The unblocked version is especially popular among students because it allows them to practice or play with friends, even if the game is restricted on school networks.</p>
+The unblocked version is especially popular among students because it is available on GitHub, like 1v1 lol github, it allows them to practice or play with friends, even if the game is restricted on school networks.</p>
 
 			
               </div>
