--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
-				            <a href="./game/block-blast.html">
+				            <a href="./game/block-blast-unblocked.html">
 				                <img src="assets/img/blockblast/block-blast.webp" alt="Block Blast" title="Block Blast" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
-				            <h2><a href="./game/block-blast.html">Block Blast</a></h2>
+				            <h2><a href="./game/block-blast-unblocked.html">Block Blast</a></h2>
 				            <p class="game-meta">Puzzle | Desktop | Mobile</p>
 				        </div>
 				    </div>
