--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -13,6 +13,7 @@
         <link rel="canonical" href="/game/eggy-car.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	<meta property="og:image" content="https://faf-games.github.io/assets/img/eggycar/eggy-car.png">
       <!-- Title -->
       <title>Eggy Car unblocked: Play Now for Free on FAF Games</title>
       <!-- Favicon -->
