--- a/game/football-bros.html
+++ b/game/football-bros.html
@@ -23,6 +23,7 @@
         <link rel="canonical" href="/game/football-bros.html" />
 	    <meta name="robots" content="index, follow">
 	    <meta name="publisher" content="FAF Games Team">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/football-bros/football-bros.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
