--- a/game/eparkour.html
+++ b/game/eparkour.html
@@ -14,6 +14,7 @@
         <link rel="canonical" href="/game/eparkour.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/eparkour/eparkour.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
