--- a/game/doodle-jump.html
+++ b/game/doodle-jump.html
@@ -27,6 +27,7 @@
         <link rel="canonical" href="/game/doodle-jump.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+		<meta property="og:image" content="https://faf-games.github.io/assets/img/doodlejump/doodle-jump.png">
             <!-- Favicon -->
             <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
             <!--Bootstrap css-->
