--- a/game/bitlife.html
+++ b/game/bitlife.html
@@ -39,6 +39,7 @@
         <link rel="canonical" href="/game/bitlife.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/bitlife/bitlife.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
