--- a/game/basketball-bros.html
+++ b/game/basketball-bros.html
@@ -19,6 +19,7 @@
         <link rel="canonical" href="/game/basketball-bros.html" />
 	    <meta name="robots" content="index, follow">
 	    <meta name="publisher" content="FAF Games Team">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/basketball-bros/basketball-bros.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
