--- a/game/slope.html
+++ b/game/slope.html
@@ -26,6 +26,7 @@
         <link rel="canonical" href="/game/slope.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/slope/slope.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
