--- a/game/soccerbros.html
+++ b/game/soccerbros.html
@@ -21,6 +21,7 @@
        <link rel="canonical" href="/game/soccerbros.html" />
 	    <meta name="robots" content="index, follow">
 	    <meta name="publisher" content="FAF Games Team">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/soccerbros/soccerbros.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
