--- a/game/survival-race.html
+++ b/game/survival-race.html
@@ -21,6 +21,7 @@
         <link rel="canonical" href="/game/survival-race.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	<meta property="og:image" content="https://faf-games.github.io/assets/img/survival-race.png">
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
              <!--Bootstrap css-->
