--- a/game/survival-race.html
+++ b/game/survival-race.html
@@ -288,6 +288,29 @@
       margin-bottom: 30px;
       margin-top: 20px
     }
+	     body {
+    background-color: #121212;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+  }
+  .section {
+    background-color: #1e1e1e;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+  }
+  h2 {
+    color: #ffffff;
+    border-bottom: 1px solid #333;
+    padding-bottom: 5px;
+  }
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  li {
+    margin-bottom: 5px;
+  }
     
   </style>
    </head>
@@ -423,6 +446,33 @@
       <section class="fag-games-area related_games section_100">
          <div class="container">
             <div class="row">
+		    			    <div class="container">
+<div class="section">
+  <h2>About</h2>
+  <p><strong>Survival Race Unblocked</strong> is a thrilling driving game where you race through deadly tracks filled with obstacles, traps, and jumps. Test your reflexes and driving skills while trying to survive as long as possible. Perfect for quick, adrenaline-pumping sessions in school or at work. No downloads or installation needed—play directly in your browser.</p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>Arrow Keys:</strong> Drive</li>
+    <li><strong>Spacebar:</strong> Jump / Flip</li>
+    <li><strong>R:</strong> Restart</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> SpeedPlay Studios</li>
+    <li><strong>Category:</strong> Racing, Action</li>
+    <li><strong>Genre:</strong> Survival Racer</li>
+    <li><strong>Players:</strong> 500K+ (Active)</li>
+    <li><strong>Release Date:</strong> July 2021</li>
+    <li><strong>Build:</strong> HTML5, JavaScript</li>
+  </ul>
+</div>
+						    </div>
                <div class="col-12">
                   <div class="site-heading">
                      <h2 class="heading_animation">Related <span>games</span></h2>
