--- a/game/pacman-doodle.html
+++ b/game/pacman-doodle.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pacman Doodle Unblocked: Play Now for Free on FAF Games</title>
-   <meta name="description" content="Enjoy PacMan, the timeless classic arcade game. Play Pac-Man online, navigate the maze, avoid ghosts, and relive the retro gaming experience.">
-    <meta name="keywords" content="Pac-Man online, play Pac-Man, Pacman, Pacman Unblocked, Pacman Doodle, Pacman , Google Pacman, free Pac-Man game, classic arcade games, retro maze games, Pac-Man game free, Pac-Man ghosts, play retro games, Pac-Man classic">
+    <title>Pac Man Unblocked: Play Now for Free on FAF Games</title>
+   <meta name="description" content=" Enjoy Pac-Man, the timeless classic arcade game. Play Pac-Man online, navigate the maze, avoid ghosts, and relive the retro gaming experience.">
+    <meta name="keywords" content="Pac-Man online, play Pac-Man, Pacman, Pacman Unblocked, Pacman Doodle, Pacman, Google Pacman, free Pac-Man game, classic arcade games, retro maze games, Pac-Man game free, Pac-Man ghosts, play retro games, Pac-Man classic">
 
     <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/pacman-doodle.html" />
@@ -421,7 +421,7 @@
       <div class="container">
 
 	       <div class="article-header">
-        <h1>Pacman Doodle </h1>
+        <h1>Pac-Man </h1>
     </div>
         <div class="row justify-content-center">
           <div class="col-lg-12">
