--- a/game/pac-man.html
+++ b/game/pac-man.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Pac-Man online, play Pac-Man, Pacman, Pacman Unblocked, Pacman Doodle, Pacman, Google Pacman, free Pac-Man game, classic arcade games, retro maze games, Pac-Man game free, Pac-Man ghosts, play retro games, Pac-Man classic">
 
     <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/pacman-doodle.html" />
+        <link rel="canonical" href="/game/pac-man.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
 	<meta property="og:image" content="https://faf-games.github.io/assets/img/pacman/logo.png">
