--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
-                <a href="./game/pacman-doodle.html">
+                <a href="./game/pac-man.html">
                     <img src="assets/img/pacman/pacman.webp" alt="Pacman Doodle" title="Pacman Doodle" />
                 </a>
             </div>
             <div class="games-desc">
-                <h2><a href="./game/pacman-doodle.html">Pacman Doodle</a></h2>
+                <h2><a href="./game/pac-man.html">Pacman Doodle</a></h2>
                 <p class="game-meta">Skill | Desktop</p>
             </div>
         </div>
