--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
                 <a href="./game/pac-man.html">
-                    <img src="assets/img/pacman/pacman.webp" alt="Pacman Doodle" title="Pacman Doodle" />
+                    <img src="assets/img/pacman/pacman.webp" alt="Pac-man" title="Pac-man" />
                 </a>
             </div>
             <div class="games-desc">
-                <h2><a href="./game/pac-man.html">Pacman Doodle</a></h2>
+                <h2><a href="./game/pac-man.html">Pac Man</a></h2>
                 <p class="game-meta">Skill | Desktop</p>
             </div>
         </div>
