--- a/index.html
+++ b/index.html
@@ -326,6 +326,21 @@
 				        </div>
 				    </div>
 				</div>
+				        <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/0-granny.html">
+				                <img src="assets/img/granny/granny.webp" alt=" Granny Game" title=" Granny Game" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/0-granny.html">Granny Game</a></h2>
+				            <p class="game-meta">Survival | Desktop | Horror</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 				       				       <div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
