--- a/game/fire-truck.html
+++ b/game/fire-truck.html
@@ -20,6 +20,7 @@
         <link rel="canonical" href="/game/fire-truck.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+	  <meta property="og:image" content="https://faf-games.github.io/assets/img/firetruck/fire-truck.png">
         <!-- Title -->
         <title>Fire Truck Unblocked: Play Now for Free on FAF Games</title>
         <!-- Favicon -->
