--- a/game/0-granny.html
+++ b/game/0-granny.html
@@ -289,6 +289,29 @@
         margin-bottom: 30px;
         margin-top: 20px
       }
+	      body {
+    background-color: #121212;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+  }
+  .section {
+    background-color: #1e1e1e;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+  }
+  h2 {
+    color: #ffffff;
+    border-bottom: 1px solid #333;
+    padding-bottom: 5px;
+  }
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  li {
+    margin-bottom: 5px;
+  }
       
     </style>
 
@@ -413,6 +436,35 @@
         <section class="fag-games-area related_games section_100">
            <div class="container">
               <div class="row">
+<div class="container">
+<div class="section">
+  <h2>About</h2>
+  <p><strong>Granny Unblocked</strong> is a terrifying first-person horror game where you must escape a haunted house while being hunted by a creepy, relentless Granny. Solve puzzles, hide under beds, and unlock doors—all while avoiding her. Ideal for fans of survival horror games, it runs directly in your browser with no download required.</p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>WASD / Arrow Keys:</strong> Move</li>
+    <li><strong>Mouse:</strong> Look Around / Interact</li>
+    <li><strong>E:</strong> Pick Up / Use Items</li>
+    <li><strong>C:</strong> Crouch</li>
+    <li><strong>Esc:</strong> Pause</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> DVloper (Fan-made Unblocked Port)</li>
+    <li><strong>Category:</strong> Horror, Escape</li>
+    <li><strong>Genre:</strong> Survival Horror</li>
+    <li><strong>Players:</strong> 1M+ (Active)</li>
+    <li><strong>Release Date:</strong> Original: 2017 | Unblocked: 2022</li>
+    <li><strong>Build:</strong> HTML5, Unity WebGL</li>
+  </ul>
+</div>
+</div>		      
                  <div class="col-12">
                     <div class="site-heading">
                        <h2 class="heading_animation">Related <span>games</span></h2>
