--- a/game/0-granny.html
+++ b/game/0-granny.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="
+        <meta name="description" content="Play Granny Unblocked online for free! Escape the haunted house, avoid Granny, and survive the horror. No downloads or installation required—play instantly in your browser.">
           
         <meta name="keywords" content="  granny game
         Granny cartoon
