--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1048,7 +1048,7 @@ The unblocked version is especially popular among students because it is availab
         <script>
            function loadMainGame()
            {
-                 var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://snow-rider-3d.io/game/1v1-lol-3/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                 var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://76-games.github.io/play/1v1-lol-3/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                  document.getElementById("loadgame").innerHTML = html;
                  document.getElementById('loadgame').scrollIntoView();
            }
