--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
     
     <h3>1. Easy Access Anytime, Anywhere:</h3>
     <p>
-        We are made FAF Games to work around the typical restrictions you’d find at school or work. Whether you’re sneaking in some game time between classes or during a break at work, Unblocked Games 6x on FAF Games makes sure you can play without interruptions. And if you’re a more serious gamer, check out Unblocked Games Premium for even more options!
+        We made FAF Games to work around the typical restrictions you’d find at school or work. Whether you’re sneaking in some game time between classes or during a break at work, Unblocked Games 6x on FAF Games makes sure you can play without interruptions. And if you’re a more serious gamer, check out Unblocked Games Premium for even more options!
     </p>
     
     <h3>2. A Huge Collection of Games:</h3>
