--- a/game/survival-race.html
+++ b/game/survival-race.html
@@ -449,7 +449,11 @@
 		    			    <div class="container">
 <div class="section">
   <h2>About</h2>
-  <p><strong>Survival Race Unblocked</strong> is a thrilling driving game where you race through deadly tracks filled with obstacles, traps, and jumps. Test your reflexes and driving skills while trying to survive as long as possible. Perfect for quick, adrenaline-pumping sessions in school or at work. No downloads or installation needed—play directly in your browser.</p>
+<p>
+  <strong>Survival Race Unblocked</strong> is a thrilling driving game where you race through deadly tracks packed with obstacles, tricky traps, and wild jumps. Test your reflexes and driving skills while trying to survive as long as you can. Perfect for those quick, adrenaline-pumping sessions—whether you’re sneaking in a game at school or taking a break at work. No downloads or installation needed; just play directly in your browser.
+  <br><br>
+  Want more fun? Check out a huge collection of <a href="https://faf-games.github.io"><strong>unblocked games</strong></a> and discover your next favorite challenge!
+</p>
 </div>
 
 <div class="section">
