--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -1227,22 +1227,22 @@
       </p>
     </section>
 
-    <section>
-      <h2>Top 6x Games You Can Play Right Now</h2>
-      <p>
-        Now, here’s the fun part! These are a few crowd-pleasers you’ll often spot on 6x platforms:
-      </p>
-      <ul>
-        <li><b>Run 3</b> – Never gets old, no matter how many times you fall off the edge.</li>
-        <li><b>Retro Bowl</b> – For those itching to call the shots on the field.</li>
-        <li><b>Cookie Clicker</b> – Simple, addictive, and perfect for a brain break.</li>
-        <li><b>1v1.LOL</b> – Quick duels, fast matchmaking, and a great way to settle friendly rivalries.</li>
-        <li><b>Basketball Stars</b> – Who says you can’t have some sports fun between classes?</li>
-      </ul>
-      <p>
-        And that’s just the tip of the iceberg. The best part? Most of these games load instantly—no downloads, no mess.
-      </p>
-    </section>
+   <section>
+  <h2>Top 6x Games You Can Play Right Now</h2>
+  <p>
+    Now, here’s the fun part! If you’re on the hunt for a variety of <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a>, <b>6x</b> platforms won’t leave you disappointed. These are a few crowd-pleasers you’ll often spot on <b>unblocked games 6x</b> sites:
+  </p>
+  <ul>
+    <li><b>Run 3</b> – Never gets old, no matter how many times you fall off the edge.</li>
+    <li><b>Retro Bowl</b> – For those itching to call the shots on the field.</li>
+    <li><b>Cookie Clicker</b> – Simple, addictive, and perfect for a brain break.</li>
+    <li><b>1v1.LOL</b> – Quick duels, fast matchmaking, and a great way to settle friendly rivalries.</li>
+    <li><b>Basketball Stars</b> – Who says you can’t have some sports fun between classes?</li>
+  </ul>
+  <p>
+    Looking for even more <a href="https://faf-games.github.io" target="_blank"><b>unblocked games 6x</b></a>? There’s a whole world to explore with just a click—no downloads, no mess.
+  </p>
+</section>
 
     <section>
       <h2>Is 6x Safe to Use?</h2>
