--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -1197,7 +1197,7 @@
     <section>
       <h2>Why is 6x So Popular?</h2>
       <p>
-        Not to beat around the bush, but the main reason <b>6x</b> sites like <b>Classroom 6x</b> have exploded in popularity? Two words: <b>Unblocked games</b>. When lunchtime rolls around and students want a quick break, there’s nothing worse than a blocked site. That’s where these 6x sites swoop in—no fuss, just instant fun.
+        Not to beat around the bush, but the main reason <a href="https://faf-games.github.io" target="_blank"><b>6x</b></a> sites like <b>Classroom 6x</b> have exploded in popularity? Two words: <b>Unblocked games</b>. When lunchtime rolls around and students want a quick break, there’s nothing worse than a blocked site. That’s where these 6x sites swoop in—no fuss, just instant fun.
       </p>
       <p>
         On top of that, these platforms are known for their simple design, fast loading times, and, you guessed it, games that actually work in school. But here’s the kicker: most of those sites only scratch the surface. There’s a whole world of features, tips, and safety tricks they barely mention.
@@ -1207,10 +1207,10 @@
     <section>
       <h2>Classroom 6x: More Than Just Games</h2>
       <p>
-        Sure, everyone’s after the games—but <b>Classroom 6x</b> isn’t just for sneaking in a round of Slope or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
+        Sure, everyone’s after the games—but <a href="https://faf-games.github.io" target="_blank"><b>Classroom 6x</b></a> isn’t just for sneaking in a round of Slope or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
       </p>
       <p>
-        Tired of wading through endless ads and popups? Looking for sites that actually keep your data private? We’ve sifted through the noise to highlight only what matters.
+        Tired of wading through endless ads and pop-ups? Looking for sites that actually keep your data private? We’ve sifted through the noise to highlight only what matters.
       </p>
     </section>
 
@@ -1228,7 +1228,7 @@
     </section>
 
    <section>
-  <h2>Top 6x Games You Can Play Right Now</h2>
+  <h2>Top Unblocked games6x You Can Play on FAF Games</h2>
   <p>
     Now, here’s the fun part! If you’re on the hunt for a variety of <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a>, <b>6x</b> platforms won’t leave you disappointed. These are a few crowd-pleasers you’ll often spot on <b>unblocked games 6x</b> sites:
   </p>
