--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -1228,7 +1228,7 @@
     </section>
 
    <section>
-  <h2>Top Unblocked games6x You Can Play on FAF Games</h2>
+  <h2>Top Unblocked Games 6x You Can Play on FAF Games</h2>
   <p>
     Now, here’s the fun part! If you’re on the hunt for a variety of <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a>, <b>6x</b> platforms won’t leave you disappointed. These are a few crowd-pleasers you’ll often spot on <b>unblocked games 6x</b> sites:
   </p>
