--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -1207,7 +1207,7 @@
     <section>
       <h2>Classroom 6x: More Than Just Games</h2>
       <p>
-        Sure, everyone’s after the games—but <a href="https://faf-games.github.io" target="_blank"><b>Classroom 6x</b></a> isn’t just for sneaking in a round of Slope or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
+        Sure, everyone’s after the games—but <a href="https://faf-games.github.io" target="_blank"><b>Classroom 6x</b></a> isn’t just for sneaking in a round of <a href="https://faf-games.github.io/game/slope.html" target="_blank"><b>Slope</b></a> or Minecraft. It can be a powerful hub for quick access to learning tools, classroom resources, and even productivity apps, if you know where to look.
       </p>
       <p>
         Tired of wading through endless ads and pop-ups? Looking for sites that actually keep your data private? We’ve sifted through the noise to highlight only what matters.
