--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -1187,7 +1187,7 @@
 			    <section>
       <h2>What is 6x?</h2>
       <p>
-        Ever stumbled across the term <b>6x</b> and wondered, “Alright, what’s the deal here?” You’re not alone. These days, <b>6x</b> is buzzing all over student forums and gaming sites, mostly because of <b>Classroom 6x</b>—a hidden gem for students itching to play <b>unblocked games</b> when the school firewall’s got other plans.
+        Ever stumbled across the term <b>6x</b> and wondered, “Alright, what’s the deal here?” You are not alone. These days, <b>6x</b> is buzzing all over student forums and gaming sites, mostly because of <b>Classroom 6x</b>, a hidden gem for students itching to play <b>unblocked games</b> when the school firewall has other plans.
       </p>
       <p>
         Simply put, <b>6x</b> refers to a collection of platforms, websites, and resources, often linked to school or classroom gaming and productivity. But there’s a lot more under the hood. So, let’s peel back the curtain and see what’s really going on.
@@ -1217,20 +1217,20 @@
     <section>
       <h2>How to Access 6x Unblocked</h2>
       <ul>
-        <li>Try using alternative URLs—sometimes, just a dash or a different domain can make all the difference (<b>classroom-6x.io</b> vs <b>classroom6x</b>).</li>
-        <li>If a site is down, search for mirror or backup links—don’t just give up at the first hurdle.</li>
+        <li>Try using alternative URLs—sometimes, just a dash or a different domain can make all the difference (<b>6x-classroom.io</b> vs <b>6x-classroom.gitlab.io</b>).</li>
+        <li>If a site is down, search for mirror or backup links, don’t just give up at the first hurdle.</li>
         <li>Clear your browser cache if pages aren’t loading right—old data can play tricks on you.</li>
         <li>Be smart with extensions and pop-up blockers to avoid ads, malware, and distractions.</li>
       </ul>
       <p>
-        One word to the wise: always double-check what you’re clicking, especially if you’re using school equipment. Not every 6x site is created equal.
+        One word to the wise: always double-check what you are clicking, especially if you’re using school equipment. Not every 6x site is created equal.
       </p>
     </section>
 
    <section>
   <h2>Top Unblocked Games 6x You Can Play on FAF Games</h2>
   <p>
-    Now, here’s the fun part! If you’re on the hunt for a variety of <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a>, <b>6x</b> platforms won’t leave you disappointed. These are a few crowd-pleasers you’ll often spot on <b>unblocked games 6x</b> sites:
+    Now, here’s the fun part! If you are on the hunt for a variety of <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a>, <b>6x</b> platforms won’t leave you disappointed. These are a few crowd pleasers you will often spot on <b>unblocked games 6x</b> sites:
   </p>
   <ul>
     <li><b>Run 3</b> – Never gets old, no matter how many times you fall off the edge.</li>
@@ -1247,7 +1247,7 @@
     <section>
       <h2>Is 6x Safe to Use?</h2>
       <p>
-        Well, let’s not beat about the bush. As with any unofficial game site, there are a few risks—random pop-ups, suspicious downloads, or sites pretending to be the real deal. But with a bit of common sense (and maybe an ad blocker), most students use Classroom 6x and similar platforms without a hitch.
+        Well, let us not beat about the bush. As with any unofficial game site, there are a few risks random pop-ups, suspicious downloads, or sites pretending to be the real deal. But with a bit of common sense (and maybe an ad blocker), most students use Classroom 6x and similar platforms without a hitch.
       </p>
       <p>
         Here’s a simple rule of thumb: stick to well-known links, don’t enter any personal info, and steer clear of anything asking for downloads.
@@ -1258,7 +1258,7 @@
       <h2>6x FAQ</h2>
       <dl>
         <dt>Is 6x legal?</dt>
-        <dd>Accessing unblocked games isn’t illegal, but it might break your school’s rules. Play smart—don’t get caught.</dd>
+        <dd>Accessing unblocked games isn’t illegal, but it might break your school’s rules. Play smart don’t get caught.</dd>
         <dt>How do I find working 6x sites?</dt>
         <dd>Google “Classroom 6x unblocked” or keep a few alternative links handy in case your favorite site goes down.</dd>
         <dt>Can teachers use 6x?</dt>
