--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Classroom 6x offers unblocked games for educational fun in schools. Enhance learning with engaging puzzles, car, math, logic, and strategy games safe and accessible!">
+    <meta name="description" content="Classroom 6x offers unblocked games for educational fun in schools on FAF Games. Enhance learning with engaging puzzles, car, math, logic, and strategy games safe and accessible!">
     <meta name="keywords" content="car games, free car games, online car games, Classroom 6x, racing games, driving games, car simulator, 3D car games, drifting games, car racing, car parking games, car stunt games, realistic car games, multiplayer car games, car game unblocked, car driving simulator">
     <meta name="author" content="FAF Games Team">
 	<meta name="publisher" content="FAF Games Team">
 	 <link rel="canonical" href="/classroom6x/index.html" />
     <!-- Title -->
-    <title>Classroom 6x | Play Unblocked Games At School</title>
+    <title>Classroom 6x | Play Unblocked Games At FAF Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
