--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -497,12 +497,12 @@
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://6x-games.github.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">
+            <a href="https://1v1-lolunblocked.gitlab.io" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/img/1v1.lol/logo.webp" alt="Server 2" title="Server 2" />
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://6x-games.github.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">Server 2</a></h2>
+            <h2><a href="https://1v1-lolunblocked.gitlab.io" target="_blank" rel="noopener noreferrer">Server 2</a></h2>
             <p class="game-meta">1v1.lol Unblocked</p>
         </div>
     </div>
