--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -563,6 +563,28 @@
         </div>
     </div>
 </div>
+			<section>
+    <h2>Mastering the Controls</h2>
+    <p>
+      The controls are simple but deadly. Here is a quick cheat sheet for the most common setup:
+    </p>
+    <ul>
+      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
+      <li><b>Left Mouse Button</b>: Shoot</li>
+      <li><b>Right Mouse Button</b>: Build</li>
+      <li><b>Spacebar</b>: Jump</li>
+      <li><b>E</b>: Use item</li>
+      <li><b>Q</b>: Switch weapons</li>
+      <li><b>R</b>: Reload</li>
+      <li><b>C</b>: Crouch</li>
+      <li><b>Z</b>: Zoom</li>
+      <li><b>1, 2, F</b>: Quick weapon switching</li>
+      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
+    </ul>
+    <p>
+      Tinker with your keybinds if you want to play like a pro—most top players customize everything!
+    </p>
+  </section>
 
 
 	<div class="col-12">
@@ -916,23 +938,136 @@
                       </div>
                   </div>
 
-<h2>1v1.lol Unblocked: How to Play and Why It’s So Popular</h2>
-<p>Have you ever wanted to play <strong>1v1.lol</strong> but got stuck behind a school or work firewall? It’s frustrating when a game you enjoy is blocked, right? Luckily, there’s a way around this problem. With<a href="https://1v1-unblocked.gitlab.io">1v1 Unblocked</a>, you can dive into the action no matter where you are, even if the network restrictions try to stop you.</p>
+<article>
+  <header>
+    <h1>1v1.lol Unblocked – The Ultimate US Guide for Winning Every Match</h1>
+    <p>Locked out of your favorite game at school or work? Don’t sweat it. Here’s the inside scoop on <b>1v1 lol unblocked</b> how to play, where to find it, and what separates good players from the true champs.</p>
+  </header>
 
-<h2>What is 1v1.lol?</h2>
-<p>In case you haven’t heard, 1v1.lol is an exciting one-on-one shooter game that also lets you build defensive structures. It’s like a mini version of Fortnite but more focused on quick, <strong>tactical battles</strong>. Whether you love building or just want to outshoot your opponent, this game offers both. It’s become super popular in schools, especially because it tests your reflexes and strategy in a short, fun match.</p>
+  <section>
+    <h2>What is 1v1.lol and Why is It So Addictive?</h2>
+    <p>
+      <b>1v1.lol</b> is more than just another shooter—it’s a quick-fire battle of wits, reflexes, and building skills. Imagine Fortnite’s building and shooting mechanics, but boiled down to their purest, fastest form. The best part? Games are short, matches are intense, and you’re always one clever move away from victory—or defeat.
+    </p>
+    <p>
+      Whether you’re outsmarting opponents with walls and ramps or out-aiming them in a split-second shootout, every round’s a fresh chance to show what you’re made of. No wonder students and casual gamers alike keep coming back for more.
+    </p>
+  </section>
 
-<h2>Why Do You Need 1v1.lol Unblocked?</h2>
-<p>Most school or work networks block <strong>online games</strong>, which can be a real bummer when you want a quick break. The <strong>unblocked version of 1v1.lol</strong> is great because it bypasses those restrictions, letting you play on your school’s computer without any hassle. You can just search for a website that hosts the  <strong> <a href="https://faf-games.github.io/">Unblocked Games</a></strong>, load it up, and start having fun.</p>
+  <section>
+    <h2>How to Play 1v1.lol (Even When It is Blocked!)</h2>
+    <p>
+      Getting started with <b>1v1.lol unblocked</b> is a breeze—even if your school or work network’s got tough rules. Here’s how most US players do it:
+    </p>
+    <ol>
+      <li>
+        <b>Search “1v1.lol unblocked” on Google</b> – You will find sites like <a href="https://faf-games.github.io" target="_blank"><b>unblocked games</b></a> that let you play straight from your browser, no downloads, no sign-ups.
+      </li>
+      <li>
+        <b>Choose a trusted unblocked games site</b> – Look for quick loading times, no weird pop-ups, and a clean interface. If your favorite site goes down, just try another mirror—there are tons out there.
+      </li>
+      <li>
+        <b>Jump into a match</b> – Pick from game modes like classic 1v1, 2v2 box fights, practice, or even custom matches. You don’t need to create an account unless you want to save your stats.
+      </li>
+    </ol>
+    <p>
+      Pro tip: Got trouble loading the game? Try clearing your browser cache, switching devices, or connecting at home. School networks can be tricky, but where there’s a will, there’s a way!
+    </p>
+  </section>
 
-<h2>How to Find 1v1.lol Unblocked</h2>
-<p>Finding the unblocked version is pretty easy. There are tons of sites that offer it. Just search for <strong>1v1.lol unblocked on Google</strong>, and you’ll come across some game sites that let you play without any restrictions. Once you’re on one of these sites, you can jump right into a game—no need to download anything or create an account.</p>
+  <section>
+    <h2>Game Modes – There is More Than Meets the Eye</h2>
+    <p>
+      What keeps 1v1.lol so fresh? It’s all about the variety:
+    </p>
+    <ul>
+      <li><b>Classic 1v1</b> – A true test of solo skills. Outbuild and outshoot your rival.</li>
+      <li><b>Box 2v2</b> – Team up and take on another pair in tactical showdowns.</li>
+      <li><b>Battle Royale</b> – Survive till the end in a multi-player free-for-all. Last one standing wins!</li>
+      <li><b>JustBuild</b> – Want to practice building without the stress? This mode’s for you.</li>
+      <li><b>Aim Trainer</b> – Hone your shot with a dedicated mode built for improvement.</li>
+      <li><b>Party Mode</b> – Play private matches with friends, set your own rules, and have a blast.</li>
+    </ul>
+    <p>
+      Each mode got its own vibe, so try 'em all and see what fits your style.
+    </p>
+  </section>
 
-<h2>Why is 1v1.lol So Popular?</h2>
-<p>One of the best things about <strong>1v1.lol</strong> is that the matches are short. This makes it perfect for squeezing in a game during a break between classes. The game’s easy-to-learn controls and building mechanics add a creative element, so it’s not just about shooting—it’s also about outbuilding your opponent.
+  <section>
+    <h2>Mastering the Controls</h2>
+    <p>
+      The controls are simple but deadly. Here is a quick cheat sheet for the most common setup:
+    </p>
+    <ul>
+      <li><b>WASD / Arrow Keys</b>: Move around the arena</li>
+      <li><b>Left Mouse Button</b>: Shoot</li>
+      <li><b>Right Mouse Button</b>: Build</li>
+      <li><b>Spacebar</b>: Jump</li>
+      <li><b>E</b>: Use item</li>
+      <li><b>Q</b>: Switch weapons</li>
+      <li><b>R</b>: Reload</li>
+      <li><b>C</b>: Crouch</li>
+      <li><b>Z</b>: Zoom</li>
+      <li><b>1, 2, F</b>: Quick weapon switching</li>
+      <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
+    </ul>
+    <p>
+      Tinker with your keybinds if you want to play like a pro—most top players customize everything!
+    </p>
+  </section>
 
-The unblocked version is especially popular among students because it is available on GitHub, like 1v1 lol github, it allows them to practice or play with friends, even if the game is restricted on school networks.</p>
+  <section>
+    <h2>Winning Tips and Battle-Tested Strategies</h2>
+    <p>
+      Want to stop losing to campers or sweat-lords? Here’s how real 1v1.lol legends do it:
+    </p>
+    <ul>
+      <li><b>Build smart, not just fast.</b> Slapping up walls for no reason burns through resources and leaves you wide open.</li>
+      <li><b>Keep your cool when under fire.</b> Don’t panic-build. Stay calm and look for your opening.</li>
+      <li><b>Switch between building and shooting on the fly.</b> The faster you swap, the harder you are to hit—and the more pressure you put on your opponent.</li>
+      <li><b>Master different weapons.</b> Some players only spam one gun. Big mistake. Mix it up for best results.</li>
+      <li><b>Use the environment.</b> Duck behind your buildings, ramp up high, and always try to get the high ground.</li>
+      <li><b>Practice in JustBuild or Aim Trainer.</b> Champions aren’t born—they’re built, one click at a time.</li>
+    </ul>
+    <p>
+      Remember, there’s no shortcut to getting good—practice makes perfect. But these tips should put you a step ahead right out of the gate.
+    </p>
+  </section>
 
+  <section>
+    <h2>Frequently Asked Questions (FAQ)</h2>
+    <dl>
+      <dt>Is 1v1.lol unblocked legal to play at school?</dt>
+      <dd>
+        It’s not illegal, but it might go against your school’s tech policies. Don’t get yourself in trouble—play during free time and use safe sites!
+      </dd>
+      <dt>Can I play on my phone?</dt>
+      <dd>
+        Absolutely. 1v1.lol is available on web browsers, Android, and iOS. Just open your browser or download the app from your store.
+      </dd>
+      <dt>What’s the best site for unblocked games?</dt>
+      <dd>
+        Trusted sites like <a href="https://faf-games.github.io" target="_blank">unblocked games 6x</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
+      </dd>
+      <dt>Who created 1v1.lol?</dt>
+      <dd>
+        1v1.lol was created by JustPlay.LOL, a team known for its fast-paced, competitive games.
+      </dd>
+    </dl>
+  </section>
+
+  <section>
+    <h2>Ready to Play?</h2>
+    <p>
+      No more waiting around! With this guide, you are all set to play <b>1v1.lol unblocked</b> and maybe even climb the leaderboards. Whether you’re a beginner or a seasoned shooter, there’s always a new trick to learn, a new rival to face, and a new victory to claim.
+    </p>
+    <p>
+      Hungry for more? Check out our <a href="https://faf-games.github.io" target="_blank">unblocked games</a> library for dozens of quick, free games you can play anywhere, anytime.
+    </p>
+  </section>
+
+    <p>Last updated: May 2025</p>
+</article>
 			
               </div>
             </div>
