--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -591,7 +591,7 @@ dl dd {
       <li><b>Z/X/C/V/Y</b>: Swap building platforms fast</li>
     </ul>
     <p>
-      Tinker with your keybinds if you want to play like a pro—most top players customize everything!
+      Tinker with your keybinds if you want to play like a pro Most top players customize everything!
     </p>
   </section>
       
