--- a/f/cubefield/index.html
+++ b/f/cubefield/index.html
@@ -8,6 +8,8 @@
 		<script src="assets/three.min.js"></script>
     <!-- CLASSES -->
 		<script src="cube.min.js"></script>
+		     <meta name="robots" content="noindex, nofollow">
+
 </head>
 <body>
   <button class="newGame" id="newGame" type="button" onclick="gameReset()">New Game</button>
