--- a/game/cubefield.html
+++ b/game/cubefield.html
@@ -7,6 +7,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
             <meta name="viewport" content="width=device-width, initial-scale=1">
+			 <meta property="og:image" content="https://faf-games.github.io/assets/img/cubefield/cubefield.png">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <title>Cubefield Unblocked: Play Now for Free on FAF Games</title>
             <meta name="description" content="Slope served as inspiration for the addicting endless running game Rolling Ball 3D. 
