--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
 
     .discord-button:hover {
     }
+
+		  b, strong {
+  color: #ffd560;
+  font-weight: 600;
+}
   </style>
 
 	<script data-cfasync="false">
