--- a/index.html
+++ b/index.html
@@ -113,10 +113,6 @@
     .discord-button:hover {
     }
 
-		  b, strong {
-  color: #ffd560;
-  font-weight: 600;
-}
   </style>
 
 	<script data-cfasync="false">
@@ -1240,8 +1236,8 @@ Unblocked games or unblocked games premium, such as <a href="https://faf-games.g
     <p>Follow these simple steps to start playing:</p>
     <ol>
         <li><strong>Visit our site:</strong> <a href="https://faf-games.github.io" target="_blank">FAF Games</a></li><br>
-        <li><strong>Select your favorite Unblocked Games 6x.</strong> Browse through our huge selection or search for a specific game you’re excited to play.</li><br>
-        <li><strong>Click and play instantly—no downloads or sign-ups required!:</strong></li><br>
+        <li><strong>Select your favorite Unblocked Games 6x:</strong> Browse through our huge selection or search for a specific game you’re excited to play.</li><br>
+        <li><strong>Click and play:</strong> Instantly no downloads or sign-ups required!</li><br>
     </ol>
     
     <h2>Pro Tips for Playing in Restricted Areas</h2>
