--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@ Unblocked games or unblocked games premium, such as <a href="https://faf-games.g
                                         <ul>
                                             <li><a href="/game/drift-hunters.html"><span class="fa fa-caret-right"></span>Drift Hunters</a></li>
                                             <li><a href="/game/drift-boss.html"><span class="fa fa-caret-right"></span>Drift Boss</a></li>
-                                            <li><a href="/game/block-blast.html"><span class="fa fa-caret-right"></span>Block Blast</a></li>
+                                            <li><a href="/game/block-blast-unblocked.html"><span class="fa fa-caret-right"></span>Block Blast Unblocked</a></li>
                                             <li><a href="/game/1v1-lol.html"><span class="fa fa-caret-right"></span>1V1.lol Unblocked</a></li>
                                             <li><a href="/game/eggy-car.html"><span class="fa fa-caret-right"></span>Eggy Car</a></li>
                                         </ul>
