--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -627,7 +627,7 @@ dl dd {
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://cool-math.gitlab.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">
+            <a href="https://cool-math.gitlab.io/go/class-439.html" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/img/1v1.lol/logo.webp" alt="Server 3" title="Server 3" />
             </a>
         </div>
