--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -160,7 +160,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="/game/football-bros.html">
-				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				                <img src="https://faf-games.github.io/assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
@@ -218,7 +218,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="/game/basketball-bros.html">
-				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				                <img src="https://faf-games.github.io/assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
