--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -632,7 +632,7 @@ dl dd {
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://cool-math.gitlab.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">Server 3</a></h2>
+            <h2><a href="https://cool-math.gitlab.io/go/class-439.html" target="_blank" rel="noopener noreferrer">Server 3</a></h2>
             <p class="game-meta">1v1.lol Unblocked</p>
         </div>
     </div>
