--- a/index.html
+++ b/index.html
@@ -1133,12 +1133,12 @@ Unblocked games or unblocked games premium, such as <a href="https://faf-games.g
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://6x-classroom.gitlab.io" target="_blank" rel="noopener noreferrer">
+            <a href="https://6x-classroom.io" target="_blank" rel="noopener noreferrer">
                 <img src="assets/img/ub.png" alt="Server 5" title="Server 5" />
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://6x-classroom.gitlab.io" target="_blank" rel="noopener noreferrer">Server 5</a></h2>
+            <h2><a href="https://6x-classroom.io" target="_blank" rel="noopener noreferrer">Server 5</a></h2>
             <p class="game-meta">Unblocked Games</p>
         </div>
     </div>
