--- a/index.html
+++ b/index.html
@@ -1119,12 +1119,12 @@ Unblocked games or unblocked games premium, such as <a href="https://faf-games.g
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://1v1-unblocked.gitlab.io" target="_blank" rel="noopener noreferrer">
+            <a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">
                 <img src="assets/img/ub.png" alt="Server 4" title="Server 4" />
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://1v1-unblocked.gitlab.io" target="_blank" rel="noopener noreferrer">Server 4</a></h2>
+            <h2><a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">Server 4</a></h2>
             <p class="game-meta">Unblocked games</p>
         </div>
     </div>
