--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -641,12 +641,12 @@ dl dd {
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
-            <a href="https://1v1-unblocked.gitlab.io" target="_blank" rel="noopener noreferrer">
+            <a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">
                 <img src="/assets/img/1v1.lol/logo.webp" alt="Server 4" title="Server 4" />
             </a>
         </div>
         <div class="games-desc">
-            <h2><a href="https://1v1-unblocked.gitlab.io" target="_blank" rel="noopener noreferrer">Server 4</a></h2>
+            <h2><a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">Server 4</a></h2>
             <p class="game-meta">1v1.lol Unblocked</p>
         </div>
     </div>
