--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1140,9 +1140,9 @@ dl dd {
       <dd>
         Absolutely. 1v1.lol is available on web browsers, Android, and iOS. Just open your browser or download the app from your store.
       </dd>
-      <dt>What’s the best site for unblocked games?</dt>
+      <dt>What are the best sites for unblocked games?</dt>
       <dd>
-        Trusted sites like <a href="https://faf-games.github.io" target="_blank">unblocked games 6x</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
+        Trusted sites like <a href="https://faf-games.github.io" target="_blank">unblocked games</a> are always a safe bet. Stick with well-known platforms to avoid malware or fake games.
       </dd>
       <dt>Who created 1v1.lol?</dt>
       <dd>
